array.island.Island.scala.error
Compilation error:
Island:4: error: not found: value x
  x = num.size-1
  ^Island:6: error: not found: value niveaux
  niveaux = 0
  ^Island:8: error: not found: value x
  for (i <- 1 to x){
                 ^Island:11: error: not found: value niveaux
      niveaux+=1;
      ^