array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var hauteur:Int = 0
  x = num.size-1
  var valeur = num(0)
  niveaux = 0
  
  for (i <- 1 to x){
    
    if (valeur<num(i)){
      niveaux+=1;
      valeur=num(i);
    }
    else if (valeur>num(i)){
      valeur=num(i);
    }
  }
  return valeur
}